# blackboard

./: Cargo.toml  README.md
benches/: cli_bench.rs
skills/blackboard-agent-taskboard/: SKILL.md
skills/blackboard-agent-taskboard/agents/: openai.yaml
skills/blackboard-agent-taskboard/references/: examples.md  role-use-cases.md
skills/blackboard-agent-taskboard/scripts/: bootstrap_project_board.sh  seed_project_tasks.sh
src/: cli.rs  db.rs  error.rs  main.rs  models.rs  utils.rs
src/app/: auth.rs  board.rs  mod.rs  task.rs  user.rs
tests/: clear.rs  cli_surface.rs  concurrency.rs  json_output.rs  permissions.rs  polling.rs  schema.rs  tasks_dependencies.rs  user_board_flow.rs
tests/common/: mod.rs
